tests/compile-fail/exception-args.rs
#![no_main]
#![no_std]

extern crate imxrt_rt;
extern crate panic_halt;

use imxrt_rt::{entry, exception};

#[entry]
fn foo() -> ! {
    loop {}
}

#[exception(SysTick)] //~ ERROR This attribute accepts no arguments
fn SysTick() {}
